/*
 * Copyright 2016-present the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.center.auth;

import "api/common/r.proto";

// 配置相关
option java_package = "com.aiforest.tmmes.api.center.auth";
option java_outer_classname = "BlackIpProto";
option objc_class_prefix = "Auth";
option java_multiple_files = true;

// 接口类
service BlackIpApi {
  rpc checkBlackIpValid (IpQuery) returns (RBlackIpDTO);
}

// checkBlackIpValid Query
message IpQuery {
  string ip = 1;
}

// R of BlackIp DTO
message RBlackIpDTO {
  api.common.RDTO result = 1; // 结果
  bool data = 2; // 数据
}